# XmlEditor

./: .gitignore  CMakeLists.txt  FilterDataModel.cpp  FilterDataModel.h  GeneralItemsDelegate.cpp  GeneralItemsDelegate.h  ListItemDelegate.cpp  ListItemDelegate.h  README.md  SettingsModel.cpp  SettingsModel.h  StableDeclaration.h  TableModel.cpp  Untitled Diagram.drawio  example.xml  tablemodel.cpp  tablemodel.h  tags_info_db.xml
Serialization/: BaseSetting.cpp  BaseSetting.h  CXmlHandler.cpp  CXmlHandler.h  CXmlNode.cpp  CXmlNode.h  MainWidgetSetting.cpp  MainWidgetSetting.h  SettingTagInfo.cpp  SettingTagInfo.h  SettingsLoader.cpp  SettingsLoader.h  TagsInfoLoader.cpp  TagsInfoLoader.h
Tests/: CTestSerialization.hpp  test_XmlEditor.cpp
Tools/: Exceptions.h  LoadSettingsExceptions.h  MathFunc.cpp  MathFunc.h  StableDeclaration.h  TypeExceptions.h
Widgets/: COutputLogger.cpp  COutputLogger.h  FilterDataModel.cpp  FilterDataModel.h  MainWindow.cpp  MainWindow.h  SettingsModel.cpp  SettingsModel.h  SettingsTreeView.cpp  SettingsTreeView.h  WdgSearch.cpp  WdgSearch.h  mainwindow.cpp
